tests/bad/presence_fmt.go
package main;
import "fmt"

func fact ( n int ) int {
	return n
}



func main () {
	}

/*
== Expected compiler output ==
File "./tests/bad/presence_fmt.go", line 0, characters -1--1:
error: fmt imported but not used
*/
